# Argos

./: , s.cortex_env, s.auth_secret) '  -files --others --exclude-standard | grep -E "(model-lanes|MODEL_LANES|download_all_models|NEW_IMPLEMENTATION|04-runtime-and-ops-strix)" | head -20  .dockerignore  .env  .env.example  .envrc  .gitignore  CORTEX_DEEP_DIVE_ANALYSIS.md  DEPLOY.md  DEPLOYMENT_HARDENING_PLAN.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.playwright  E2E_TESTING_COMPREHENSIVE.md  E2E_TESTING_SETUP.md  E2E_TEST_EXECUTION_SUMMARY.md  FIX_NIX_NOW.md  FORENSIC_AUDIT_REPORT.md  FORMATTING_VERIFICATION_REPORT.md  IMPLEMENTATION_COMPLETE.md  NEW_IMPLEMENTATION.md  NIX_DAEMON_FIX.md  NIX_DEPLOYMENT.md  NIX_FIX.md  NIX_SETUP.md  Product Requirements Document (PRD) Project Name_ Cortex (AI-Integrated Knowledge & Execution Engine).md  README.md  ROCM_INTEGRATION_MAP.md  ROCM_QUICK_START.md  SETUP_COMPLETE.txt  SETUP_NIX.md  SPEC-001-PERSISTENCE.md  SPEC-002-RAG-PIPELINE.md  SPEC-003-LLM-GATEWAY.md  SPEC-004-FRONTEND-WIRING.md  SPEC-005-ORCHESTRATION.md  SPEC-006-ROADMAP-LOGIC.md  SPEC-007-ASYNC-JOBS.md  SPEC-008-HARDWARE-ACCELERATION.md  SPEC-009-AUTH-SECURITY.md  (+76 more)
backend/: README-backend.md  alembic.ini  atlas.db  flake.nix  init_db_staging.py  pyproject.toml  pytest.ini  test-doc-0.md
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  20241201_0001_001_initial_schema_initial_schema.py  20241209_0002_auth_tables.py  20241209_0003_ingest_durable_pipeline.py
backend/app/: config.py  database.py  db.py  main.py  models.py  observability.py  worker.py
backend/app/api/routes/: __init__.py  agents.py  auth.py  context.py  gap_analysis.py  health.py  ideas.py  ingest.py  knowledge.py  mode.py  n8n.py  project_intel.py  projects.py  roadmap.py  streaming.py  system.py  workflows.py
backend/app/domain/: chat.py  common.py  gap_analysis.py  mode.py  model_lanes.py  models.py  project.py  project_intel.py  system_metrics.py
backend/app/graphs/: project_manager_graph.py
backend/app/repos/: __init__.py  gap_analysis_repo.py  mode_repo.py  project_intel_repo.py  project_repo.py  roadmap_repo.py
backend/app/services/: __init__.py  agent_service.py  auth_service.py  chat_parser_service.py  context_service.py  gap_analysis_service.py  health_service.py  idea_service.py  ingest_router.py  ingest_service.py  knowledge_service.py  llama_cpp_service.py  llm_service.py  local_llm_client.py  model_registry.py  model_warmup_service.py  n8n_service.py  project_intel_service.py  project_service.py  qdrant_code_search.py  qdrant_service.py  rag_service.py  repo_service.py  roadmap_service.py  storage_service.py  streaming_service.py  system_metrics_service.py  system_service.py  vllm_lane_manager.py  workflow_compiler.py  workflow_service.py
backend/app/tasks/: ingest_tasks.py
backend/app/tools/: n8n.py
backend/fixtures/demo_docs/: demo_overview.txt  demo_playbook.txt  demo_requirements.txt
backend/scripts/: bootstrap_admin.py  download_models.py  ingestion_report.py  inject_takeout.py  inject_takeout_api.py  inject_takeout_optimized.py  install_rocm_wheels.sh  process_queued_jobs.py  reprocess_jobs.py  reprocess_jobs_api.py  requeue_failed_ingests.py  reset_databases.py  seed_demo.py  verify_data_integrity.py  verify_models.py  wait_for_ingest_jobs.py
backend/tests/: conftest.py  test_advanced_rag.py  test_agents_api.py  test_auth.py  test_context_api.py  test_contextual_linking.py  test_embedding_health.py  test_gap_analysis_api.py  test_gap_analysis_service.py  test_graphs.py  test_health_and_metrics.py  test_ingest.py  test_mode_api.py  test_mode_integration.py  test_model_lanes.py  test_n8n_integration.py  test_postgres_smoke.py  test_projects.py  test_qdrant_integration.py  test_repo_analysis_e2e.py  test_roadmap_generation.py  test_startup_guard.py  test_startup_progress.py  test_system_metrics.py  test_workflows_api.py
config/: model_registry.json
docs/: 04-runtime-and-ops-strix-optimization.md  CORTEX_DEEP_DIVE_ANALYSIS.md  CURSOR_SSH_BEST_PRACTICES.md  DEMO_MODE.md  DEPLOY.md  DEPLOYMENT_HARDENING_PLAN.md  DEPLOYMENT_MODES.md  DEPLOYMENT_READINESS.md  DEPLOYMENT_READY.md  DOCKER_VS_NIX_COMPARISON.md  E2E_ENHANCEMENTS_COMPLETE.md  E2E_TESTING_COMPREHENSIVE.md  E2E_TESTING_SETUP.md  E2E_TEST_EXECUTION_SUMMARY.md  FORENSIC_AUDIT_REPORT.md  FORMATTING_ERRORS_REPORT.md  FORMATTING_VERIFICATION_REPORT.md  FRONTEND_BACKEND_INTEGRATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN_MODEL_LANES.md  MANUAL.md  MODEL_DOWNLOAD_GUIDE.md  MODEL_DOWNLOAD_STATUS.md  MODEL_LANES_E2E_TESTING.md  MODEL_LANES_IMPLEMENTATION_COMPLETE.md  MODEL_LANES_IMPLEMENTATION_SUMMARY.md  MODEL_LANES_QUICK_REFERENCE.md  NEW_IMPLEMENTATION.md  NIX_DEPLOYMENT.md  PYTORCH_WHEEL_COMPARISON.md  ROCM_INTEGRATION_MAP.md  ROCM_QUICK_START.md  ROCOMPNEW_PROJECT_ARTIFACTS_OVERVIEW.md  SPEC_COMPLETION_REPORT.md  System Blueprint & Architecture_ Project Cortex.md  TESTING_COMPLETE.md  TEST_COVERAGE.md  TEST_EXECUTION_REPORT.md  VLLM_012_DETAILED_ANALYSIS.md  VLLM_DOCKER_IMAGE_SPECIFICATION.md  (+22 more)
e2e/: README.md  accessibility.spec.ts  agent-runs.spec.ts  agent-streaming.spec.ts  ai-models.spec.ts  auth.spec.ts  context.spec.ts  cross-browser.spec.ts  deployment-smoke.spec.ts  edge-cases.spec.ts  example.spec.ts  fixtures.ts  gap-analysis.spec.ts  health.spec.ts  ideas.spec.ts  ingest.spec.ts  knowledge.spec.ts  mode.spec.ts  model-lanes.spec.ts  n8n-workflows.spec.ts  performance.spec.ts  project-intel.spec.ts  projects.spec.ts  rag-advanced.spec.ts  repo-analysis.spec.ts  roadmap-generation.spec.ts  roadmap.spec.ts  system.spec.ts  tsconfig.json  visual-regression.spec.ts  websocket-full.spec.ts  websocket.spec.ts  workflows.spec.ts
frontend/: App.tsx  README.md  flake.nix  index.html  index.tsx  metadata.json  package.json  vite.config.ts
mcp-noauth-server/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
n8n_data/: config  database.sqlite
nix/: README.md  docker-services.nix  overlays.nix  rocm-shell.nix  rocm.nix  services.nix  vllm.nix
ops/: Caddyfile  (+31 more)
(+167 files in other folders)
