[tool.poetry]
name = "cortex-backend"
version = "0.1.0"
description = "FastAPI backend for Project Cortex"
authors = ["Your Name <you@example.com>"]
readme = "README-backend.md"
packages = [ { include = "app" } ]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
huggingface-hub = "^0.17.0"
qdrant-client = "^1.7.3"
pypdf = "^3.17.4"
langgraph = "^1.0.0"
tree-sitter-languages = "^1.10.2"
httpx = "^0.25.2"
openai = "^1.0.0"
psutil = "^5.9.5"
requests = "^2.31.0"
langchain-community = "^0.4.1"
langchain = "^1.1.0"
langchain-openai = "^1.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
