[tool.poetry]
name = "cortex-backend"
version = "0.1.0"
description = "FastAPI backend for Project Cortex"
authors = ["Your Name <you@example.com>"]
readme = "README-backend.md"
packages = [ { include = "app" } ]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
huggingface-hub = "^0.17.0"
qdrant-client = "^1.7.3"
pypdf = "^3.17.4"
langgraph = "^1.0.0"
tree-sitter-languages = "^1.10.2"
httpx = "^0.25.2"
openai = "^1.0.0"
psutil = "^5.9.5"
requests = "^2.31.0"
langchain-community = "^0.4.1"
langchain = "^1.1.0"
langchain-openai = "^1.1.0"
sentence-transformers = "^2.2.0"  # Requires PyTorch - install ROCm wheels from ~/rocm/py311-tor290/wheels/
# PostgreSQL / Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.0"
greenlet = "^3.0.0"
aiosqlite = "^0.19.0"

# PyTorch dependencies (ROCm-enabled, no CUDA/NVIDIA)
# sentence-transformers requires PyTorch. Install ROCm wheels manually:
#   poetry run pip install --no-index --find-links ~/rocm/py311-tor290/wheels/torch2.9 torch torchvision torchaudio
#   poetry run pip install --no-index --find-links ~/rocm/py311-tor290/wheels/common triton tokenizers
#
# Available ROCm wheels (see ~/rocm/py311-tor290/README.md):
#   - torch-2.9.1a0+gitd38164a (ROCm 7.1.1, HIP-enabled, gfx1151)
#   - torchvision-0.25.0a0+617079d (ROCm-enabled)
#   - torchaudio-2.9.1+a224ab2 (ROCm-enabled)
#   - triton-3.5.0+gitc3c476f3 (ROCm backend)
#   - tokenizers-0.22.3.dev0 (universal)
#
# Optional ROCm wheels:
#   - onnxruntime_rocm-1.24.0 (ROCm variant)
#   - ctranslate2-4.6.1 (ROCm-enabled inference)
#   - bitsandbytes-0.48.0.dev0 (ROCm quantization, gfx1151 support)
#
# NOTE: Do NOT install PyTorch from PyPI or CUDA indexes - use ROCm wheels only
# All wheels are GPU-enabled with zero CPU-only builds, optimized for AMD Ryzen AI Max+ 395


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
